# myCollabMediaController

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  README.md  build.ps1  build_android32.sh  build_android64.sh  configure.txt  dist_android64.sh  env.ps1  readme.md  readme.txt
.github/workflows/: build-android.yml
grpc/: client.cpp
include/: MediaController.h
mock/: DeviceMock.h  MediaController.h  MediaControllerInterface.h  StreamInGrpcClientMock.h  StreamoutGrpcClientMock.h
protos/: packagehello (Copy).proto  packagehello.grpc.pb.cc  packagehello.grpc.pb.h  packagehello.pb.cc  packagehello.pb.h
scripts/patches/: grpc-1.78.1-cross-build-codegen-only.patch
sources/: CMakeLists.txt  Logging.h  MediaController.cpp  MediaController.h  MediaController.md  MediaControllerImpl.cpp  MediaControllerImpl.h  MediaControllerImpl.md
sources/grpcstreamin/: RTSPClientService.proto  StreamInGrpcClient.cpp  StreamInGrpcClient.h  StreamInGrpcClientInterface.h
sources/grpcstreamout/: StreamoutGrpcClient.cpp  StreamoutGrpcClient.h  StreamoutGrpcClientInterface.h  grpc_str_out.proto
test/: CMakeLists.txt  unit_test.cpp
